--- a/WaetherWeather/StoryBoards/Main.storyboard
+++ b/WaetherWeather/StoryBoards/Main.storyboard
@@ -132,9 +132,11 @@
                     </view>
                     <connections>
                         <outlet property="LocationSearch" destination="66i-aZ-8hW" id="J9F-wf-okL"/>
+                        <segue destination="uAs-Y5-iEl" kind="unwind" identifier="unwindToWeatherDisplay" unwindAction="unwindToWeatherDisplayWithSegue:" id="D4z-SF-oCc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a5g-pd-9zI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="uAs-Y5-iEl" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1959" y="179"/>
         </scene>
